--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,7 @@
       "program": "${workspaceFolder}/run.py",
       "console": "integratedTerminal",
       "justMyCode": true,
-      "args": [
-        "--day",
-        "17"
-      ]
+      "args": []
     },
     {
       "name": "[Silver] Solution",
@@ -23,7 +20,7 @@
       "program": "${workspaceFolder}/run.py",
       "console": "integratedTerminal",
       "justMyCode": true,
-      "args": ["--solve", "--day", "17"]
+      "args": ["--solve"]
     },
     {
       "name": "[Gold] Sample",
@@ -32,7 +29,7 @@
       "program": "${workspaceFolder}/run.py",
       "console": "integratedTerminal",
       "justMyCode": true,
-      "args": ["--second"]
+      "args": ["--second", "--day", "18"]
     },
     {
       "name": "[Gold] Solution",
